hphp/hack/test/typecheck/shape/key_exists_refines_union_good.php.like_types.exp
File "key_exists_refines_union_good.php", line 15, characters 25-26:
Invalid argument (Typing[4110])
File "key_exists_refines_union_good.php", line 15, characters 25-26:
Expected shape(?'x' => [unresolved], ...) because Shapes::idx expects a shape
File "key_exists_refines_union_good.php", line 7, characters 3-20:
But got dynamic because it is an unenforceable type
